<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:fitsSystemWindows="false"
    android:layout_height="match_parent"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_navbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="400dp">
        <ImageView
            android:id="@+id/portada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/banner"
            android:scaleType="centerCrop"
            android:src="@drawable/effect_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_search"
                android:layout_marginEnd="@dimen/margin_right_search"
                app:layout_constraintEnd_toStartOf="@+id/iv_user"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/app_name"
                />
            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/app_name"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_header"
            android:layout_marginHorizontal="60dp"
            >
            <TextView
                android:id="@+id/tv_serie"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/size_title"
                tools:ignore="SpUsage" />
            <TextView
                android:id="@+id/peliculas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/size_title"
                tools:ignore="SpUsage" />
            <TextView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title3"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="@dimen/size_title"
                tools:ignore="SpUsage"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            >
            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categorie1"
                    android:textColor="@color/white"
                    android:layout_marginHorizontal="20dp"
                    android:textSize="@dimen/size_categorie"
                    tools:ignore="SpUsage" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria2"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_categorie"
                    tools:ignore="SpUsage"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria3"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_categorie"
                    tools:ignore="SpUsage"

                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoria4"
                    android:layout_marginHorizontal="20dp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_categorie"
                    tools:ignore="SpUsage"

                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="15dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_list"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_list"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text"
                app:icon="@drawable/ic_plus"
                app:iconGravity="top"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpUsage" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_play_movie"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/button_play"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:icon="@drawable/ic_play"
                app:iconTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_info"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_info"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text"
                app:icon="@drawable/ic_info"
                app:iconGravity="top"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/title_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cl_navbar"
        android:text="@string/title_rv_premiere"
        android:padding="@dimen/paddin_title_rv"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/sixe_title_rv"
        tools:ignore="SpUsage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_premiere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rv_premiere"
        android:text="@string/title_rv_horror"
        android:padding="@dimen/paddin_title_rv"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="@dimen/sixe_title_rv"
        tools:ignore="SpUsage"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_horror"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>